Refs #140559 - Fix icon spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -548,6 +548,7 @@ div#page-document {
             margin-right: 10px;
 
             i.icon {
+              margin-left: 0px;
               background: white;
               line-height: 1em;
             }
@@ -913,11 +914,11 @@ div.ui.modal.facet {
 
       .color {
         position: relative;
-        background-color: #2d9390;
         width: 0px;
         height: 10px;
-        border-radius: 1px;
         animation: progres 4s infinite linear;
+        background-color: #2d9390;
+        border-radius: 1px;
       }
     }
   }
